implement clundinary widget and send emails

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,10 @@ ORDER_TOKEN_SECRET=
 RESEND_KEY=
 RESEND_FROM_EMAIL=
 RESEND_FROM_NAME=
+
+# Cloudinary (Image uploads)
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_API_KEY=
